Inicializando repositorio technodevs

--- a/ui/src/scss/_layout.scss
+++ b/ui/src/scss/_layout.scss
@@ -73,6 +73,11 @@
     }
 }
 
+.slidebar-logo {
+    border-radius: 100%;
+    filter: grayscale(1);
+}
+
 // layout container
 // -------------------------------------------------------------------
 
